--- a/over_ons.html
+++ b/over_ons.html
@@ -18,17 +18,16 @@
 </head>
 <body>
     <!-- NAVIGATIEBALK-->
-    <div class="container-fluid fullpage m-0 p-0">
         <div class="container-fluid fullpage m-0 p-0">
             <nav class="navbar navbar-expand-md navbar-light">
                 <a class="navbar-brand brand" href="./index.html">Pingwing</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="">
+                    <div class="">
                         <div class="hamburger">
                             <div class="hamburgermenu"></div>
                         </div>
-                    </span>
+                    </div>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <ul class="navbar-nav navigation-list">
@@ -61,7 +60,8 @@
                 </div>
             </nav>
             <!--MAIN-->
-            <div class=" main uber-main-container">
+            <div class="main uber-main-container position-relative">
+               <!--<img class="position-absolute img img-fluid wereldbol" src="./images/testtest.png" alt="wereldbol">--> 
                 <main class="main container">
                     <div class="row py-5 my-5">
                         <div class="col-md-6 mt-5 pt-5 justify-content-md-start column-header">
@@ -78,7 +78,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row ">
+                    <div class="row">
                         <div class="col-md-4 my-5 py-5 column-content">
                             <h4>Team</h4>
                             <p>Een gedisciplineerd team van 5 studenten dat streeft naar een veilig gevoel voor kinderen
@@ -89,25 +89,23 @@
                             <p>Wij bij “PingWing” focussen op het gebruiksgemak van onze armband, applicatie & website
                                 door overzichtelijke interfaces te voorzien. De armband geeft duidelijke signalen naar
                                 het kind door middel van geluid- en lichtsignalen.</p>
-                            </div>
-                                <div class="col-md-4 my-5 py-5 column-content">
-                                    <h4>Onze missie</h4>
-                                    <p>Wij gaan ervoor om ouders een veilig gevoel te geven en kinderen gerust te
-                                        stellen in hun omgeving.</p>
-                                </div>
                         </div>
-                        <div class="row">
-                            <div
-                                class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-start justify-content-center column-picture">
-                                <img src="./images/RikHoofd.png" alt="Rik">
-                            </div>
-                            <div class="col-md-6 py-md-5 pb-5 column-content">
-                                <h1 class="text-md-right text-center my-5 bg1">Rik</h1>
-                                <p>"Hij weet van aanpakken! Rik is vertrouwd met de code. <br>
-                                    Hij houdt er van!<br>
-                                    Als hij zich ergens in vastbijt gaat het lukken.
-                                    </p>
-                            </div>
+                        <div class="col-md-4 my-5 py-5 column-content">
+                            <h4>Onze missie</h4>
+                            <p>Wij gaan ervoor om ouders een veilig gevoel te geven en kinderen gerust te
+                                stellen in hun omgeving.</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-start justify-content-center column-picture">
+                            <img src="./images/RikHoofd.png" alt="Rik">
+                        </div>
+                        <div class="col-md-6 py-md-5 pb-5 column-content">
+                            <h1 class="text-md-right text-center my-5 bg1">Rik</h1>
+                            <p>"Hij weet van aanpakken! Rik is vertrouwd met de code. <br>
+                                Hij houdt er van!<br>
+                                Als hij zich ergens in vastbijt gaat het lukken.
+                            </p>
                         </div>
                     </div>
                     <div class="row">
@@ -124,8 +122,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div
-                            class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-start justify-content-center column-picture">
+                        <div class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-start justify-content-center column-picture">
                             <img src="./images/ThymenHoofd.png" alt="Thymen">
                         </div>
                         <div class="col-md-6 py-md-5 pb-5 column-content">
@@ -133,7 +130,7 @@
                             <p>De oudste van de groep, maar dat merk je niet altijd! <br>
                                 Hij houdt zich graag bezig met design en met de code. <br>
                                 Ook tekent hij graag iets uit in CAD.
-                                </p>
+                            </p>
                         </div>
                     </div>
                     <div class="row">
@@ -142,20 +139,18 @@
                             <p>XD is zijn tweede natuur, design is zijn ding!<br>
                                 Dries is een gepassioneerde teamplayer, <br>
                                 het is nooit saai als hij er is.</p>
-                                                    </div>
-                        <div
-                            class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-end justify-content-center column-picture">
+                        </div>
+                        <div class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-end justify-content-center column-picture">
                             <img src="./images/DriesHoofd.png" alt="Dries">
                         </div>
                     </div>
                     <div class="row pb-5">
-                        <div
-                            class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-start justify-content-center column-picture">
+                        <div class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-start justify-content-center column-picture">
                             <img src="./images/ArishaHoofd.png" alt="Arisha">
                         </div>
                         <div class="col-md-6 py-md-5 pb-5 column-content">
                             <h1 class="text-md-right text-center my-5">Arisha</h1>
-                                                        <p>Ze tovert illustraties op haar tablet alsof het niets is!<br>
+                            <p>Ze tovert illustraties op haar tablet alsof het niets is!<br>
                                 Arisha is een harde werker en vult de mannen in het team goed aan.</p>
                         </div>
                     </div>
@@ -211,7 +206,8 @@
                             </p>
                         </div>
                     </div>
+                </div>
             </footer>
         </div>
-       </body>
+    </body>
 </html>
