animations over ons

--- a/over_ons.html
+++ b/over_ons.html
@@ -96,21 +96,23 @@
                                 stellen in hun omgeving.</p>
                         </div>
                     </div>
+                    <div class="color-even"></div>
                     <div class="row">
                         <div class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-start justify-content-center column-picture">
                             <img src="./images/RikHoofd.png" alt="Rik">
                         </div>
                         <div class="col-md-6 py-md-5 pb-5 column-content">
-                            <h1 class="text-md-right text-center my-5 bg1">Rik</h1>
+                            <h1 class="text-md-right text-center my-5 bg1 text-white">Rik</h1>
                             <p>"Hij weet van aanpakken! Rik is vertrouwd met de code. <br>
                                 Hij houdt er van!<br>
                                 Als hij zich ergens in vastbijt gaat het lukken.
                             </p>
                         </div>
                     </div>
+                    <div class="color-odd"></div>
                     <div class="row">
                         <div class="col-md-6 py-md-5 pb-5 column-content">
-                            <h1 class="text-md-left text-center my-5">Kai</h1>
+                            <h1 class="text-md-left text-center my-5 pl-4 text-white">Kai</h1>
                             <p>"Design is zijn ding! Ook coderen is voor hem geen probleem.<br>
                                 Zijn Kritische blik helpt het team vooruit.<br>
                                 Kijk wel uit als hij aan komt scheuren op zijn elektrische step!
@@ -121,21 +123,23 @@
                             <img src="./images/KaiHoofd.png" alt="Kai">
                         </div>
                     </div>
+                    <div class="color-even"></div>
                     <div class="row">
                         <div class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-start justify-content-center column-picture">
                             <img src="./images/ThymenHoofd.png" alt="Thymen">
                         </div>
                         <div class="col-md-6 py-md-5 pb-5 column-content">
-                            <h1 class="text-md-right text-center my-5">Thymen</h1>
+                            <h1 class="text-md-right text-center my-5 text-white">Thymen</h1>
                             <p>De oudste van de groep, maar dat merk je niet altijd! <br>
                                 Hij houdt zich graag bezig met design en met de code. <br>
                                 Ook tekent hij graag iets uit in CAD.
                             </p>
                         </div>
                     </div>
+                    <div class="color-odd"></div>
                     <div class="row">
                         <div class="col-md-6 py-md-5 pb-5 column-content">
-                            <h1 class="text-md-left text-center dries my-5">Dries</h1>
+                            <h1 class="text-md-left text-center dries my-5 pl-4 text-white">Dries</h1>
                             <p>XD is zijn tweede natuur, design is zijn ding!<br>
                                 Dries is een gepassioneerde teamplayer, <br>
                                 het is nooit saai als hij er is.</p>
@@ -144,12 +148,13 @@
                             <img src="./images/DriesHoofd.png" alt="Dries">
                         </div>
                     </div>
+                    <div class="color-even"></div>
                     <div class="row pb-5">
                         <div class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-start justify-content-center column-picture">
                             <img src="./images/ArishaHoofd.png" alt="Arisha">
                         </div>
                         <div class="col-md-6 py-md-5 pb-5 column-content">
-                            <h1 class="text-md-right text-center my-5">Arisha</h1>
+                            <h1 class="text-md-right text-center my-5 text-white">Arisha</h1>
                             <p>Ze tovert illustraties op haar tablet alsof het niets is!<br>
                                 Arisha is een harde werker en vult de mannen in het team goed aan.</p>
                         </div>
