--- a/product.html
+++ b/product.html
@@ -188,7 +188,7 @@
               </svg>
             </div>
             <div class="position-absolute bandje">
-              <img src="./Images/bandjevoor.png" alt="vooraanzicht bandje">
+              <img src="./images/bandjevoor.png" alt="vooraanzicht bandje">
             </div>
           </div>
         </div>
@@ -364,11 +364,10 @@
           <ellipse id="Ellipse_126" data-name="Ellipse 126" cx="86.832" cy="86.832" rx="86.832" ry="86.832" transform="translate(162.406 35.836)" fill="#fff"/>
         </g>
       </svg>
-      
     </div>
     <div class="row row-app">
       <div class="col-sm-4 scherm1">
-        <img src="./Images/mockup_1.png" alt="scherm1 app">
+        <img src="./images/mockup_1.png" alt="scherm1 app">
       </div>
       <div class="col-sm-8 tekst-scherm1">
         <h1 class="display-3 titel-app">MyPingwing</h1><br>
@@ -391,12 +390,12 @@
             Dit hele proces is anoniem en is versleuteld om je privacy te beschermen. 
             Het werkt heel efficiënt, en op bewegingsenergie. Dus je hoeft je geen zorgen te maken over je batterijduur of dataverbruik.</p><br>
             <div class="download">
-              <img src="/Images/andriod.png" alt="download op android" class="android">
-              <img src="./Images/apple.png" alt="download op IOS" class="apple">
+              <img src="./images/andriod.png" alt="download op android" class="android">
+              <img src="./images/apple.png" alt="download op IOS" class="apple">
             </div>
         </div>
         <div class="col-sm-4 scherm2">
-          <img src="./Images/mockup_2.png" alt="scherm2 app">
+          <img src="./images/mockup_2.png" alt="scherm2 app">
         </div>
     </div>
     <!--image bomen
