iphoneX mobile responsive done

--- a/product.html
+++ b/product.html
@@ -366,27 +366,27 @@
       </svg>
     </div>
     <div class="row row-app">
-      <div class="col-sm-4 scherm1">
+      <div class="col-md-4 scherm1">
         <img src="./images/mockup_1.png" alt="scherm1 app">
       </div>
-      <div class="col-sm-8 tekst-scherm1">
+      <div class="col-md-8 tekst-scherm1">
         <h1 class="display-3 titel-app">MyPingwing</h1><br>
         <!--image bomen
         <div class="position-absolute bomen">
           <img src="./Images/bomen.png" alt="bomen">
         </div>
         -->
-        <p class="p1">Connectie met het bandje</p><br>
-        <p class="p2">Met onze app hoef je nooit meer lang naar je kinderen te zoeken. Zoek via de kaart de locatie van het bandje en krijg een overzicht waar het bandje zich bevind.
+        <p class="titelP">Connectie met het bandje</p><br>
+        <p class="tekstP">Met onze app hoef je nooit meer lang naar je kinderen te zoeken. Zoek via de kaart de locatie van het bandje en krijg een overzicht waar het bandje zich bevind.
           Je  krijgt automatisch op de kaart de radius te zien. Een probleem? 
           Klik meteen een noodmelding door naar het bandje dat je kleine speelvogel weet dat het welletjes is geweest en hij/zij terug mag keren naar het nest.</p><br>
-        <p class="p2">Het bandje zendt een beveiligd Bluetooth-signaal uit, dat kan worden opgepikt door de app. Vervolgens zie je op de kaart in de ‘MyPingwing’-app waar dat is.
+        <p class="tekstP">Het bandje zendt een beveiligd Bluetooth-signaal uit, dat kan worden opgepikt door de app. Vervolgens zie je op de kaart in de ‘MyPingwing’-app waar dat is.
           Dit hele proces is anoniem en is versleuteld om je privacy te beschermen. 
           Het werkt heel efficiënt, en op bewegingsenergie. Dus je hoeft je geen zorgen te maken over je batterijduur of dataverbruik.</p>
         </div>
-        <div class="col-sm-8 tekst-scherm2">
-          <p class="p1">Functionaliteiten</p><br>
-          <p class="p2">Het bandje zendt een beveiligd Bluetooth-signaal uit, dat kan worden opgepikt door de app. Vervolgens zie je op de kaart in de ‘MyPingwing’-app waar dat is.
+        <div class="col-md-8 tekst-scherm2">
+          <p class="titelP">Functionaliteiten</p><br>
+          <p class="tekstP">Het bandje zendt een beveiligd Bluetooth-signaal uit, dat kan worden opgepikt door de app. Vervolgens zie je op de kaart in de ‘MyPingwing’-app waar dat is.
             Dit hele proces is anoniem en is versleuteld om je privacy te beschermen. 
             Het werkt heel efficiënt, en op bewegingsenergie. Dus je hoeft je geen zorgen te maken over je batterijduur of dataverbruik.</p><br>
             <div class="download">
@@ -394,7 +394,7 @@
               <img src="./images/apple.png" alt="download op IOS" class="apple">
             </div>
         </div>
-        <div class="col-sm-4 scherm2">
+        <div class="col-md-4 scherm2">
           <img src="./images/mockup_2.png" alt="scherm2 app">
         </div>
     </div>
