--- a/over_ons.html
+++ b/over_ons.html
@@ -59,36 +59,37 @@
                     </ul>
                 </div>
             </nav>
-            <!--MAIN-->
-            <div class="main uber-main-container position-relative">
-               <!--<img class="position-absolute img img-fluid wereldbol" src="./images/testtest.png" alt="wereldbol">--> 
-                <main class="main container">
-                    <div class="row py-5 my-5">
-                        <div class="col-md-6 mt-5 pt-5 justify-content-md-start column-header">
-                            <h1 class="header-text">OVER <br> PINGWING</h1>
-                        </div>
-                        <div class="col-md-6 mt-5 pt-5 justify-content-sm-start column-header">
-                            <div>
-                                <h4>Onze missie is om ouders en kinderen overal veiligheid te bieden op een eenvoudige
-                                    manier.</h4>
-                                <br>
-                                <p>Wij nemen de verantwoordelijkheid op ons door een product te creëren waarmee we
-                                    ouders veiligheid bieden. Dit verzekeren wij door het gebruik van hoogwaardige
-                                    materialen. Daarbij houden wij onze diensten up-to-date.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-4 my-5 py-5 column-content">
-                            <h4>Team</h4>
-                            <p>Een gedisciplineerd team van 5 studenten dat streeft naar een veilig gevoel voor kinderen
-                                en een geruststellend gevoel voor ouders.</p>
-                        </div>
-                        <div class="col-md-4 my-5 py-5 column-content">
-                            <h4>Focus</h4>
-                            <p>Wij bij “PingWing” focussen op het gebruiksgemak van onze armband, applicatie & website
-                                door overzichtelijke interfaces te voorzien. De armband geeft duidelijke signalen naar
-                                het kind door middel van geluid- en lichtsignalen.</p>
+              <!--MAIN-->
+              <div class="main uber-main-container position-relative">
+                <img class="position-absolute img img-fluid wereldbol" src="./images/testtest.png" alt="wereldbol">
+                 <main class="main container">
+                     <div class="row py-5 my-5">
+                         <div class="col-md-6 mt-5 pt-5 justify-content-md-start column-header">
+                             <h1 class="header-text">OVER <br> PINGWING</h1>
+                         </div>
+                         <div class="col-md-6 my-5 py-5 justify-content-sm-start column-header">
+                             <div>
+                                 <h4>Onze missie is om ouders en kinderen overal veiligheid te bieden op een eenvoudige
+                                     manier.</h4>
+                                 <br>
+                                 <p>Wij nemen de verantwoordelijkheid op ons door een product te creëren waarmee we
+                                     ouders veiligheid bieden. Dit verzekeren wij door het gebruik van hoogwaardige
+                                     materialen. Daarbij houden wij onze diensten up-to-date.</p>
+                             </div>
+                         </div>
+                     </div>
+                     <div class="row mb-5 pb-5">
+                         <div class="col-md-4 py-5 mt-5 column-content">
+                             <h4>Team</h4>
+                             <p>Een gedisciplineerd team van 5 studenten dat streeft naar een veilig gevoel voor kinderen
+                                 en een geruststellend gevoel voor ouders.</p>
+                         </div>
+                         <div class="col-md-4 py-5 column-content">
+                             <h4>Focus</h4>
+                             <p>Wij bij “PingWing” focussen op het gebruiksgemak van onze armband, applicatie & website
+                                 door overzichtelijke interfaces te voorzien. De armband geeft duidelijke signalen naar
+                                 het kind door middel van geluid- en lichtsignalen.</p>
+ 
                         </div>
                         <div class="col-md-4 my-5 py-5 column-content">
                             <h4>Onze missie</h4>
@@ -98,10 +99,10 @@
                     </div>
                     <div class="color-even"></div>
                     <div class="row">
-                        <div class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-start justify-content-center column-picture">
+                        <div class="col-md-6 py-md-5 py-5 d-flex justify-content-md-start justify-content-center column-picture">
                             <img src="./images/RikHoofd.png" alt="Rik">
                         </div>
-                        <div class="col-md-6 py-md-5 pb-5 column-content">
+                        <div class="col-md-6 py-md-5 py-5 column-content">
                             <h1 class="text-md-right text-center my-5 bg1 text-white">Rik</h1>
                             <p>"Hij weet van aanpakken! Rik is vertrouwd met de code. <br>
                                 Hij houdt er van!<br>
