--- a/bestel.html
+++ b/bestel.html
@@ -141,8 +141,8 @@
                         <div class="info">
                             <ion-icon name="location-outline"></ion-icon>
                             <p class="m-0">
-                                Kempische Steenweg 293<br>
-                                3500 Hasselt
+                                Bikinibroek 6969<br>
+                                Ananas 420
                             </p>
                         </div>
                     </div>
