--- a/bestel.html
+++ b/bestel.html
@@ -18,16 +18,15 @@
 </head>
 <body>
         <!--Navigatie-->
-        <div class="container-fluid fullpage m-0 p-0">
             <div class="container-fluid fullpage m-0 p-0">
                 <nav class="navbar navbar-expand-md navbar-light">
                     <a class="navbar-brand brand" href="./index.html">Pingwing</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="">
+                        <div class="">
                             <div class="hamburger">
                                 <div class="hamburgermenu"></div>
                             </div>
-                        </span>
+                        </div>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <ul class="navbar-nav navigation-list">
