--- a/product.html
+++ b/product.html
@@ -17,28 +17,45 @@
 <body>
   <!--NAVIGATIEBALK-->
 <div class="container-fluid fullpage m-0 p-0">
-  <nav class="navbar navbar-expand-md navbar-light"> <a class="navbar-brand brand" href="./index.html">Pingwing</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"> <span class="">
-    <div class="hamburger">
-      <div class="hamburgermenu"></div>
-    </div>
-    </span> </button>
+  <nav class="navbar navbar-expand-md navbar-light">
+    <a class="navbar-brand brand" href="./index.html">Pingwing</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <div class="">
+            <div class="hamburger">
+                <div class="hamburgermenu"></div>
+            </div>
+        </div>
+    </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <ul class="navbar-nav navigation-list">
-        <li class="nav-item px-md-4 align-self-center"> <a class="nav-link" href="./product.html">Product </a> </li>
-        <li class="nav-item align-self-center"> <a class="nav-link px-md-4" href="./bestel.html">Bestel</a> </li>
-        <li class="nav-item align-self-center"> <a class="nav-link px-md-4" href="./over_ons.html">Over ons<span class="sr-only"></span></a> </li>
-        <li class="nav-item align-self-center"> <a class="nav-link px-md-4" href="./contact.html">Contact</a> </li>
-        <li class="nav-item align-self-center"> <a class="">|</a> </li>
-        <li class="nav-item align-self-center"> <a class="nav-link px-md-4" href="./winkelmandje.html">
-          <ion-icon class="" name="bag-outline"></ion-icon>
-          </a> </li>
-        <li class="nav-item align-self-center"> <a class="nav-link pr-md-4" id="naam" href="./login.html">
-          <ion-icon class="" name="person-outline"></ion-icon>
-          </a> </li>
-      </ul>
+        <ul class="navbar-nav navigation-list">
+            <li class="nav-item px-md-4 align-self-center">
+                <a class="nav-link" href="./product.html">Product </a>
+            </li>
+            <li class="nav-item align-self-center">
+                <a class="nav-link px-md-4" href="./bestel.html">Bestel</a>
+            </li>
+            <li class="nav-item align-self-center">
+                <a class="nav-link px-md-4" href="./over_ons.html">Over ons<span class="sr-only"></span></a>
+            </li>
+            <li class="nav-item align-self-center">
+                <a class="nav-link px-md-4" href="./contact.html">Contact</a>
+            </li>
+            <li class="nav-item align-self-center">
+                <a class="">|</a>
+            </li>
+            <li class="nav-item align-self-center">
+                <a class="nav-link px-md-4" href="./winkelmandje.html">
+                    <ion-icon class="" name="bag-outline"></ion-icon>
+                </a>
+            </li>
+            <li class="nav-item align-self-center">
+                <a class="nav-link pr-md-4" id="naam" href="./login.html">
+                    <ion-icon class="" name="person-outline"></ion-icon>
+                </a>
+            </li>
+        </ul>
     </div>
-  </nav>
+</nav>
   <!--MAIN-->
   <main class="container">
         <div class="row row-specs">
