--- a/over_ons.html
+++ b/over_ons.html
@@ -78,7 +78,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row pb-5 mb-5">
                         <div class="col-md-4 py-5 column-content">
                             <h4>Team</h4>
                             <p>Een gedisciplineerd team van 5 studenten dat streeft naar een veilig gevoel voor kinderen
