--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             </div>
         </main>
         <div class="footer-image">
-            <img class="img img-fluid w-100" src="./images/Group_564.png" alt="footer image">
+            <img class="img img-fluid w-100" src="./images/bgFooter.png" alt="footer image">
         </div>
         <!--FOOTER-->
         <footer class="row">
