--- a/over_ons.html
+++ b/over_ons.html
@@ -72,7 +72,7 @@
                                 <h4>Onze missie is om ouders en kinderen overal veiligheid te bieden op een eenvoudige
                                     manier.</h4>
                                 <br>
-                                <p>Wij nemen de verantwoordelijkheid op ons door een product te creëren waarmee we
+                                <p class="topparagraaf">Wij nemen de verantwoordelijkheid op ons door een product te creëren waarmee we
                                     ouders veiligheid bieden. Dit verzekeren wij door het gebruik van hoogwaardige
                                     materialen. Daarbij houden wij onze diensten up-to-date.</p>
                             </div>
@@ -80,18 +80,18 @@
                     </div>
                     <div class="row pb-5 mb-5">
                         <div class="col-md-4 py-5 column-content">
-                            <h4>Team</h4>
+                            <h6>Team</h6>
                             <p>Een gedisciplineerd team van 5 studenten dat streeft naar een veilig gevoel voor kinderen
                                 en een geruststellend gevoel voor ouders.</p>
                         </div>
                         <div class="col-md-4 py-5 column-content">
-                            <h4>Focus</h4>
+                            <h6>Focus</h6>
                             <p>Wij bij “PingWing” focussen op het gebruiksgemak van onze armband, applicatie & website
                                 door overzichtelijke interfaces te voorzien. De armband geeft duidelijke signalen naar
                                 het kind door middel van geluid- en lichtsignalen.</p>
                         </div>
                         <div class="col-md-4 py-5 column-content">
-                            <h4>Onze missie</h4>
+                            <h6>Onze missie</h6>
                             <p>Wij gaan ervoor om ouders een veilig gevoel te geven en kinderen gerust te
                                 stellen in hun omgeving.</p>
                         </div>
