--- a/product.html
+++ b/product.html
@@ -407,8 +407,8 @@
             Dit hele proces is anoniem en is versleuteld om je privacy te beschermen. 
             Het werkt heel efficiënt, en op bewegingsenergie. Dus je hoeft je geen zorgen te maken over je batterijduur of dataverbruik.</p><br>
             <div class="download">
-              <img src="./images/andriod.png" alt="download op android" class="android">
-              <img src="./images/apple.png" alt="download op IOS" class="apple">
+              <a href="https://www.apple.com/benl/app-store/" class="pr-4"><img src="./images/apple.png" alt=""></a>
+              <a href="https://play.google.com/store/apps"><img src="./images/andriod.png" alt=""></a>
             </div>
         </div>
         <div class="col-md-4 scherm2">
