--- a/logIn.html
+++ b/logIn.html
@@ -23,11 +23,11 @@
         <nav class="navbar navbar-expand-md navbar-light">
             <a class="navbar-brand brand" href="./index.html">Pingwing</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="">
+                <div class="">
                     <div class="hamburger">
                         <div class="hamburgermenu"></div>
                     </div>
-                </span>
+                </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <ul class="navbar-nav navigation-list">
