--- a/over_ons.html
+++ b/over_ons.html
@@ -61,7 +61,7 @@
             </nav>
             <!--MAIN-->
             <div class="main uber-main-container position-relative">
-               <img class="position-absolute img img-fluid wereldbol" src="./images/testtest.png" alt="wereldbol">
+               <img class="position-absolute img img-fluid wereldbol" src="./images/globe.png" alt="wereldbol">
                 <main class="main container">
                     <div class="row py-5 my-5">
                         <div class="col-md-6 mt-5 pt-5 justify-content-md-start column-header">
@@ -103,7 +103,7 @@
                         </div>
                         <div class="col-md-6 py-md-5 pb-5 column-content">
                             <h1 class="text-md-right text-center my-5 bg1 text-white">Rik</h1>
-                            <p>"Hij weet van aanpakken! Rik is vertrouwd met de code. <br>
+                            <p>Hij weet van aanpakken! Rik is vertrouwd met de code. <br>
                                 Hij houdt er van!<br>
                                 Als hij zich ergens in vastbijt gaat het lukken.
                             </p>
@@ -113,8 +113,8 @@
                     <div class="row">
                         <div class="col-md-6 py-md-5 pb-5 column-content">
                             <h1 class="text-md-left text-center my-5 pl-4 text-white">Kai</h1>
-                            <p>"Design is zijn ding! Ook coderen is voor hem geen probleem.<br>
-                                Zijn Kritische blik helpt het team vooruit.<br>
+                            <p>Design is zijn ding! Ook coderen is voor hem geen probleem.<br>
+                                Zijn kritische blik helpt het team vooruit.<br>
                                 Kijk wel uit als hij aan komt scheuren op zijn elektrische step!
                             </p>
                         </div>
@@ -140,7 +140,7 @@
                     <div class="row">
                         <div class="col-md-6 py-md-5 pb-5 column-content">
                             <h1 class="text-md-left text-center dries my-5 pl-4 text-white">Dries</h1>
-                            <p>XD is zijn tweede natuur, design is zijn ding!<br>
+                            <p>UI is zijn tweede natuur, design is zijn ding!<br>
                                 Dries is een gepassioneerde teamplayer, <br>
                                 het is nooit saai als hij er is.</p>
                         </div>
@@ -155,7 +155,7 @@
                         </div>
                         <div class="col-md-6 py-md-5 pb-5 column-content">
                             <h1 class="text-md-right text-center my-5 text-white">Arisha</h1>
-                            <p>Ze tovert illustraties op haar tablet alsof het niets is!<br>
+                            <p>"Klik-klik en klaar!" <br>Ze tovert illustraties op haar tablet alsof het niets is!<br>
                                 Arisha is een harde werker en vult de mannen in het team goed aan.</p>
                         </div>
                     </div>
